update swagger to look cool
